// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Desktop Modal renders 1`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      name="trap-focus"
    >
      <div
        aria-label="Test modal"
        class="container"
        role="dialog"
      >
        <div
          class="backdrop zoomOut"
        />
        <div
          class="wrapper hideOutline"
          style="width: 540px;"
          tabindex="-1"
        >
          <div
            class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
            style="width: 100%;"
          >
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box justifyCenter paddingX6 paddingY6"
              >
                <h1
                  class="Heading fontSize500 defaultText alignCenter breakWord"
                >
                  Heading
                </h1>
                <div
                  class="box marginTop1"
                >
                  <div
                    class="Text fontSize300 defaultText alignCenter breakWord fontWeightNormal"
                  >
                    Subheading
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              Modal content
            </div>
            <div
              class="box fit relative"
              style="z-index: 1;"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <div
                  class="Flex rowGap2 columnGap2 justifyEnd xsDirectionRow"
                >
                  <div
                    class="FlexItem"
                  >
                    <button
                      class="button hideOutline inline accessibilityOutline parentButton"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="button hideOutline inline accessibilityOutline tapTransition md gray enabled childrenDiv"
                      >
                        <div
                          class="Text fontSize300 defaultText alignCenter fontWeightSemiBold"
                        >
                          Cancel
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="FlexItem"
                  >
                    <button
                      class="button hideOutline inline accessibilityOutline parentButton"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="button hideOutline inline accessibilityOutline tapTransition md red enabled childrenDiv"
                      >
                        <div
                          class="Text fontSize300 inverseText alignCenter fontWeightSemiBold"
                        >
                          Next
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Mobile Modal renders 1`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      name="trap-focus"
    >
      <div
        class="container fullPageContainer"
      >
        <div
          class="backdrop"
        />
        <div
          aria-label="Bottom sheet"
          class="fullPageWrapper hideOutline"
          id=":r0:"
          role="dialog"
          style="width: 100%;"
          tabindex="-1"
        >
          <div
            class="box relative xsDirectionColumn xsDisplayFlex"
            style="width: 100%;"
          >
            <div
              class="box fit paddingX4 paddingY4 relative"
            >
              <div
                class="Flex rowGap4 columnGap4 justifyCenter xsDirectionRow xsItemsCenter"
              >
                <div
                  class="FlexItem flexNone"
                >
                  <button
                    aria-controls=":r0:"
                    aria-label="Dismiss bottom sheet"
                    class="parentButton"
                    type="button"
                  >
                    <div
                      class="button tapTransition enabled"
                    >
                      <div
                        class="pog transparent"
                        style="height: 48px; width: 48px;"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label=""
                          class="icon defaultIcon iconBlock"
                          height="20"
                          role="img"
                          viewBox="0 0 24 24"
                          width="20"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="FlexItem flexGrow"
                >
                  <div
                    class="Flex rowGap0 columnGap0 xsDirectionColumn"
                  >
                    <h1
                      class="Heading fontSize300 defaultText alignCenter breakWord lineClamp"
                      title="Heading"
                    >
                      Heading
                    </h1>
                    <div
                      class="Text fontSize100 defaultText alignCenter breakWord fontWeightNormal"
                    >
                      Subheading
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box flexGrow overflowAuto paddingX4 paddingY2"
            >
              Modal content
            </div>
            <div
              class="box fit relative"
            >
              <div
                class="box paddingX4 paddingY4"
              >
                <div
                  class="Flex rowGap2 columnGap2 justifyEnd xsDirectionRow"
                >
                  <div
                    class="FlexItem"
                  >
                    <button
                      class="button hideOutline inline accessibilityOutline parentButton"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="button hideOutline inline accessibilityOutline tapTransition md gray enabled childrenDiv"
                      >
                        <div
                          class="Text fontSize300 defaultText alignCenter fontWeightSemiBold"
                        >
                          Cancel
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="FlexItem"
                  >
                    <button
                      class="button hideOutline inline accessibilityOutline parentButton"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="button hideOutline inline accessibilityOutline tapTransition md red enabled childrenDiv"
                      >
                        <div
                          class="Text fontSize300 inverseText alignCenter fontWeightSemiBold"
                        >
                          Next
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
